--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="./assets/images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="/app.css" />
+    <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="/med.css" />
 
     <title>Frontend Mentor | Social links profile</title>
